--- a/app/src/main/res/layout/activity_ut03_ex03.xml
+++ b/app/src/main/res/layout/activity_ut03_ex03.xml
@@ -8,7 +8,7 @@
     tools:context=".ut03.ex03.presentation.Ut03Ex03Activity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rvAlerts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
